<resources>
    <string name="app_name">NyNote</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">是否允许打开系统设置进行权限设置</string>
    <string name="cancel">取消</string>
    <string name="allow">允许</string>
    <string name="scale">手势</string>
    <string name="export_note">导出</string>
    <string name="share_note">分享</string>
    <string name="draw_note">编辑</string>

    <string name="draw_pen">画笔</string>
    <string name="draw_eraser">擦除</string>
    <string name="draw_withdraw">撤回</string>
    <string name="draw_forward">前进</string>
    <string name="draw_save">保存</string>
    <string name="draw_picture">图片</string>
    <string name="draw_graph">图形</string>
    <string name="draw_clear">清除</string>
    <string name="draw_choose">选择</string>

    <string name="fileName">文件名 : </string>
    <string name="sure">确定</string>

    <string name="pick_galley">图库</string>
    <string name="take_picture">拍照</string>

    <string name="save_as">保存为 : </string>
    <string name="save_as_picture">照片</string>
    <string name="save_as_xml">XML文件</string>

    <string name="choose_saveWay">请选择保存方式</string>
    <string name="enter_fail">请输入正确的文件名</string>
    <string name="enter_way">支持2~10位中英文、数字</string>
    <string name="enter_null">请输入文件名</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="import_fail">读取失败</string>

    <string name="tips">系统提示</string>
    <string name="save_note">是否保存note</string>
    <string name="delete_note">确定删除笔记</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>

    <string name="page">/</string>
    <string name="current_page">1</string>

    <string name="png">.png</string>
    <string name="xml">.xml</string>

    <string name="bg_success">saveAsBgOnSuccess</string>
    <string name="pic_success">saveAsPicOnSuccess</string>
    <string name="xml_success">saveAsXmlOnSuccess</string>

    <string name="no_operation">no-operation</string>


</resources>
