<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:layout_margin="3dp"
    android:background="@drawable/title_item_shape"
    android:gravity="center_vertical"
    android:padding="5dp"
    android:orientation="horizontal"
    android:id="@+id/drawing_title_layout"
    android:persistentDrawingCache="animation">


    <ImageView
        android:id="@+id/pen_imageView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:contentDescription="@string/draw_pen"
        android:src="@mipmap/pen" />

    <ImageView
        android:id="@+id/eraser_imageView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:contentDescription="@string/draw_eraser"
        android:src="@mipmap/eraser" />

    <ImageView
        android:id="@+id/withdraw_imageView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:contentDescription="@string/draw_withdraw"
        android:src="@mipmap/withdraw" />

    <ImageView
        android:id="@+id/picture_imageView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:contentDescription="@string/draw_picture"
        android:src="@mipmap/picture" />

    <ImageView
        android:id="@+id/graph_imageView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:contentDescription="@string/draw_graph"
        android:src="@mipmap/graph" />

    <ImageView
        android:id="@+id/forward_imageView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:contentDescription="@string/draw_forward"
        android:src="@mipmap/forward" />

    <ImageView
        android:id="@+id/clear_imageView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:contentDescription="@string/draw_clear"
        android:src="@mipmap/clear" />

    <ImageView
        android:id="@+id/save_imageView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:contentDescription="@string/draw_save"
        android:src="@mipmap/save" />

</LinearLayout>