<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/dialog_shape"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_as"/>

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.bigmercu.cBox.CheckBox
            android:id="@+id/save_xml_checkBox"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:check_text="@string/save_as_xml"
            app:show_border="true"
            app:color_after="@color/blue2"
            app:color_before="@color/red2"
            app:check_style="hook"
            app:is_circle_border="true"/>

        <com.bigmercu.cBox.CheckBox
            android:id="@+id/save_img_checkBox"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:check_text="@string/save_as_picture"
            app:show_border="true"
            app:color_after="@color/blue2"
            app:color_before="@color/red2"
            app:check_style="hook"
            app:is_circle_border="true"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fileName"/>

    <EditText
        android:hint="@string/enter_way"
        android:paddingStart="10dp"
        android:labelFor="@+id/fileName_editText"
        android:id="@+id/fileName_editText"
        android:inputType="text"
        android:layout_marginTop="5dp"
        android:background="@drawable/dialog_shape"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:padding="5dp"
        android:layout_height="40dp" />

    <Button
        android:background="@drawable/dialog_shape"
        android:id="@+id/fileSave_button"
        android:layout_marginTop="10dp"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/sure"
        android:layout_gravity="center"
        />

</LinearLayout>