<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_margin="5dp"
    android:background="@drawable/title_item_shape"
    android:gravity="center_vertical"
    android:padding="5dp"
    android:id="@+id/reading_titile_layout"
    android:persistentDrawingCache="animation"
    >

    <ImageView
        android:id="@+id/draw_imageView"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:contentDescription="@string/draw_note"
        android:src="@mipmap/draw_note"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <View
        android:layout_width="0.1px"
        android:layout_height="25dp"
        android:background="@color/dark_grey"
        android:id="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/draw_imageView"
        android:layout_marginStart="5dp" />

    <ImageView
        android:id="@+id/gesture_imageView"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/scale"
        android:src="@mipmap/scale"
        app:layout_constraintRight_toLeftOf="@+id/share_imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/share_imageView"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/share_note"
        android:src="@mipmap/share_note"
        app:layout_constraintRight_toLeftOf="@+id/export_imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/export_imageView"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/export_note"
        android:src="@mipmap/export_note"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>